# todolist

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: deploy_on_main.yaml  push_any_exept_main.yaml
bot/: models.py  serializer.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py
bot/tg/: client.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: docker-compose.yaml
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_add_goal_model.py  0003_add_goal_comment_model.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_obects.py  0006_alter_goalcategory_board.py  0007_alter_board_created_alter_board_updated_and_more.py
tests/: factories.py
tests/boards/: test_board_create.py  test_board_list_view.py  test_board_retrieve_update_destroy_view.py
tests/categories/: test_category_create.py  test_category_list_view.py  test_category_retrieve.py
tests/comments/: test_comments_list_view.py
tests/core/: test_core_login_view.py  test_core_signup_view.py  test_profile_retrieve_view.py
tests/goals/: test_goal_list_view.py
todolist/: settings.py  urls.py
